--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
   }
 
   header {
-    background: url('/img/bg.jpg') no-repeat center center;
+    background: url('img/bg.jpg') no-repeat center center;
     background-size: cover;
     color: white;
     text-align: center;
